# section2csv

./: .gitignore  Cargo.toml  README.md  error.txt
src/: lib.rs  main.rs
src/structs/: fssummary.rs  horse.rs  horsesummary.rs  mod.rs  race.rs  racesummary.rs  sectionsummary.rs
