[package]
name = "sectionals"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
minidom = "0.15.2"
quick-xml = "0.31.0"
xml-rs = "0.8.20"
zip = "1.1.1"
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
reqwest = "0.11.23"
scraper = "0.18.1"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
sqlx-cli = "0.7.4"
thirtyfour = "0.32.0"
itertools = "0.12.1"
log = "0.4.21"
simple_logger = "5.0.0"
log4rs = "1.3.0"
csv = "1.3.0"
Inflector = "0.11.4"


[[bin]]
name = "brc"
path = "src/main.rs"
